remove bin and rar files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 
 /libgdx-0.9.8/sources/gdx-openal-sources/bin
 /libgdx-0.9.8/sources/gdx-sources/bin
+
+/test_skeleton/README.md
+
+/test_skeleton.rar
